force-app/main/default/objects/kt_checklist__Checklist_Template_Item__c/fields/kt_checklist__Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Template__c</fullName>
    <label>Checklist Template</label>
    <referenceTo>kt_checklist__Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist Template Items</relationshipLabel>
    <relationshipName>Checklist_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>