force-app/main/default/objects/kt_checklist__Checklist_Template_Item__c/fields/kt_checklist__Item__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Item__c</fullName>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>