force-app/main/default/objects/kt_checklist__Checklist_Template_Item__c/fields/kt_checklist__Item_Order__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Item_Order__c</fullName>
    <label>Item Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>